Added missing updates
For 07/2025 added:
- ACZ
- Nim

For 06/2025 added:
- ACZ
- Nim

--- a/content/monthly/2025-06.md
+++ b/content/monthly/2025-06.md
@@ -396,8 +396,107 @@ draft: false
 
 ### ACZ
 #### highlights
+
+- Delivered Status RLN prover module
+- Released Zerokit v0.8.0
+- Delivered initial de-MLS RFC
+- Delivered de-MLS Blogpost 
+- Delivered consensus RFC 
 #### report
 
+- `ift:2025q2-de-mls-tesnet`
+   - Overview:
+       - Release the new two features for de-MLS poc to achive multi-steward setting. 
+       - Deliver the first version of de-MLS RFC. 
+   - Delivered deliverables:
+       - [Feat extract proposal #36](https://github.com/vacp2p/de-mls/pull/36)
+       - [de-mls RFC PR](https://github.com/vacp2p/rfc-index/pull/166)
+       - [Consensus RFC PR](https://github.com/vacp2p/rfc-index/pull/142)
+   - Completed tasks:
+       - `ift:2025q2-de-mls-tesnet:commit-and-proposal`
+       - `ift:2025q2-de-mls-tesnet:global-message-queue`
+       - `ift:2025q2-de-mls-tesnet:multi-admin-rfc`
+       - `ift:2025q2-de-mls-tesnet:consensus-rfc`
+- `ift:2025q2-zerokit`
+   - Overview:
+       - Released Zerikit v0.8.0
+       - Error abstraction of Zerokit is enhanced
+       - Delivered performance blogpost 
+       - Merged the Zerokit maintain PRs. 
+   - Delivered deliverables:
+       - [Zerokit Release v0.8.8](https://github.com/vacp2p/zerokit/releases/tag/v0.8.0)
+       - [Error abstract PR](https://github.com/vacp2p/zerokit/pull/311)
+       - [Performance blogpost](https://www.notion.so/DRAFT-zerokit-blogpost-21c8f96fb65c80ebac95f261c9550b89)
+       - [Remove not explicit use statement #317](https://github.com/vacp2p/zerokit/pull/317)
+       - [Add error for return type of compute_id_secret function #316](https://github.com/vacp2p/zerokit/pull/316)
+       - 
+   - Completed tasks:
+       - `ift:2025q2-zerokit:release`
+       - `ift:2025q2-zerokit:error-abstraction`
+       - `ift:2025q2-zerokit:perfomance-updates-blogpost`
+       - `ift:2025q2-zerokit:zerokit-maintaining`
+- `ift:2025q2-rln-status-l2`
+   - Overview:
+       - Delivered Status RLN prover module
+       - Deliver Status RLN deployment spec initial version. 
+   - Delivered deliverables:
+       - [Add rln sc in grpc register_user #5](https://github.com/vacp2p/status-rln-prover/pull/5)
+       - [Update to zerokit v0.8.0 #6](https://github.com/vacp2p/status-rln-prover/pull/6)
+       - [smart contracts into lib smart_contract #7](https://github.com/vacp2p/status-rln-prover/pull/7)
+       - [Add Dockerfile #8](https://github.com/vacp2p/status-rln-prover/pull/8)
+       - [Unit tests compilation #9](https://github.com/vacp2p/status-rln-prover/pull/9)
+       - [TierLimits unit tests #12](https://github.com/vacp2p/status-rln-prover/pull/12)
+       - [Zerokit v0.8.0 integration #6](https://github.com/vacp2p/status-rln-prover/pull/6)
+       - [Persistant storage #10](https://github.com/vacp2p/status-rln-prover/pull/10)
+       - [Status RLN Spec doc](https://www.notion.so/RLN-Deployment-Spec-WIP-1f98f96fb65c806c8737d94851b4d14d)
+   - Completed tasks:
+       - `ift:2025q2-rln-status-l2:prover-service`
+       - `ift:2025q2-rln-status-l2:rpc-node-modification`
+       - `ift:2025q2-rln-status-l2:rln-spec`
+- `ift:2025q2-ift-zk-calls`
+    - Overview:
+        - Conducted the June's IFT ZK Call 
+    - Delivered deliverables:
+        - [Presentation record](https://www.youtube.com/watch?v=GjjW41rqh-8) 
+        - [Forum post](https://forum.vac.dev/t/polynomial-commitments-discussion/503)
+    - Completed tasks:
+        - `ift:2025q2-ift-zk-calls:ift-zk-call-3`
+- `ift:2025q2-libp2p-mix-testnet`
+   - Overview:
+       - Released the updated RFC
+       - Gathering benchmark by DST
+       - Delivered Nomos comparison doc 
+       - Merge few PRs that makes libp2p-mix repo clean and better logging. 
+   - Delivered deliverables:
+       - [Rewrite of Mix Protocol Specification #158](https://github.com/vacp2p/rfc-index/pull/158)
+       - [Nomos comparison doc](https://www.notion.so/WiP-Blend-Protocol-Mix-1ff8f96fb65c802589c5f5e26673e69f)
+       - [Add waku integrations to staging branch preceeding main #33](https://github.com/vacp2p/mix/pull/33)
+       - [GS prep to main-stage #40](https://github.com/vacp2p/mix/pull/40)
+       - [Ms initial follow up. Fixes, refactors, etc. #42](https://github.com/vacp2p/mix/pull/42)
+   - Completed tasks:
+       - `ift:2025q2-libp2p-mix-testnet:update-rfc`
+       - `ift:2025q2-libp2p-mix-testnet:nomos-comparison`
+- `nes:2025q2-nescience-consulting` 
+   - Overview:
+       - Delivered several research documents 
+   - Delivered deliverables:
+       - [SE-DE Improvement Doc](https://www.notion.so/Notes-1fc8f96fb65c801f97aecf5e522ddf9e)
+       - [Light user doc](https://www.notion.so/nes-2025q2-nescience-consulting-light-users-2068f96fb65c802db086d6981a50e71f)
+       - [Viewing keys doc](https://www.notion.so/Outgoing-viewing-keys-and-time-specific-viewing-keys-2178f96fb65c80e793e8dcd8c9d311db)
+       - [Compliance doc](https://www.notion.so/Compliance-concerns-21c8f96fb65c8046a96fc96986e9e365)
+   - Completed tasks:
+       - `nes:2025q2-nescience-consulting:SE-DE-improvements`
+       - `nes:2025q2-nescience-consulting:light-users`
+       - `nes:2025q2-nescience-consulting:viewing-keys`
+       - `nes:2025q2-nescience-consulting:compliance`
+
+- `nomos:2025q2-nomos-consulting`
+    - Overview:
+        - Delivered review docs 
+    - Delivered deliverables:
+        - [Reviewed the doc](https://www.notion.so/nomos-tech/Preliminary-Research-Impact-of-the-Service-Declaration-Protocol-on-the-statistical-inference-of-rel-206261aa09df807bad8afccf8474c6c9#209261aa09df803d9e07f14c76435c45)
+    - Completed tasks:
+        - `nomos:2025q2-nomos-consulting:zk-consulting-nomos-2`
 
 ### RFC
 #### highlights
@@ -444,6 +543,8 @@ draft: false
 
 ### Nim
 #### highlights
+
+ - Continue work in Road to Nimble 1.0 
 
 ### Security
 #### highlights
