--- a/content/monthly/2025-07.md
+++ b/content/monthly/2025-07.md
@@ -389,8 +389,87 @@ draft: false
 
 ### ACZ
 #### highlights
+
+- Zerokit has new improved CI
+- Zerokit has new rln-wasm feature where stateless feature enablement is standardized.
 #### report
 
+- `ift:2025q3-de-mls-testnet`
+   - Overview:
+       - Improved CI in scope of `ift:2025q3-de-mls-tesnet:de-mls-maintaining` task
+       - Started to implementation of [consensus RFC](https://github.com/vacp2p/rfc-index/tree/consensus-hashgraph-like)
+       - Prepare de-MLS RFC to merge 
+   - Delivered deliverables:
+       - [Improved CI PR](https://github.com/vacp2p/de-mls/pull/42)
+       - [Consensus implementation branch](https://github.com/vacp2p/de-mls/tree/feat_consensus) 
+       - [de-MLS RFC PR](https://github.com/vacp2p/rfc-index/pull/166)
+   - Completed tasks:
+- `ift:2025q3-zerokit`
+   - Overview:
+   - Delivered deliverables:
+       - [rln-wasm-utils PR](https://github.com/vacp2p/zerokit/pull/332)
+       - [resolve overlap between stateless and merkletree PR](https://github.com/vacp2p/zerokit/pull/329)
+       - [add wasm parallel testcase](https://github.com/vacp2p/zerokit/pull/328)
+       - [support feature-specific binary generation](https://github.com/vacp2p/zerokit/pull/326)
+       - [improve CI](https://github.com/vacp2p/zerokit/pull/325)
+       - [Add pmtree delete function docstring](https://github.com/vacp2p/zerokit/pull/324)
+       - [Draft specs of SN RLN deployment](https://www.notion.so/RLN-Deployment-Spec-on-Review-1f98f96fb65c806c8737d94851b4d14d#23b8f96fb65c80e79bbfed04f699f74f)
+   - Completed tasks:
+- `ift:2025q3-rln-status-l2`
+   - Overview:
+       - Release a draft RLN deployment spec 
+       - Added track and monitoring features to the [rln-prover](https://github.com/vacp2p/status-rln-prover) repo
+       - Added unit tests in scope of [e2e-prover-testing task](https://roadmap.vac.dev/acz/ift/2025q3-rln-status-l2#e2e-prover-module-testing)
+   - Delivered deliverables:
+       - [Update for new KarmaTiers smart contract PR](https://github.com/vacp2p/status-rln-prover/pull/23)
+       - [Add throughput measurement PR](https://github.com/vacp2p/status-rln-prover/pull/22)
+       - [Add histogram metrics PR](https://github.com/vacp2p/status-rln-prover/pull/20)
+       - [tracing + oltp PR](https://github.com/vacp2p/status-rln-prover/pull/19)
+       - [Add initial metrics for Prometheus PR](https://github.com/vacp2p/status-rln-prover/pull/18)
+       - [Improve test_notify unit test PR ](https://github.com/vacp2p/status-rln-prover/pull/17)
+       - [Initial benchmarks proof generation PR](https://github.com/vacp2p/status-rln-prover/pull/16)
+       - [E2E grpc test PR](https://github.com/vacp2p/status-rln-prover/pull/15)
+   - Completed tasks:
+       - `vac:acz:ift:2025q3-rln-status-l2:e2e-prover-testing`
+- `ift:2025q3-ift-zk-calls`
+   - Overview:
+       - June IFT ZK Call is conducted 
+   - Delivered deliverables:
+       - [Presentation record](https://www.youtube.com/watch?v=laZADpEj7v0)
+       - [Forum post](https://forum.vac.dev/t/arithmetic-circuit-representations/525)
+   - Completed tasks:
+       - `vac:acz:ift:2025q3-ift-zk-calls:ift-zk-call-1`
+- `ift:2025q3-libp2p-mix-testnet`
+   - Overview:
+       - Update the mix-repo [DST branch](https://github.com/vacp2p/dst-gossipsub-test-node/tree/dst-changes) for benchmarking
+       - Updating libp2p-mix RFC with latest updates
+       - Investigating the [issue](https://github.com/vacp2p/mix/issues/61) 
+       - Consulting to p2p team by reviewing PRs.
+       - Continueing the multi-surb design as a RFC section.
+   - Delivered deliverables:
+       - [A branch for update RFC](https://github.com/vacp2p/rfc-index/tree/mix-rev1-continue)
+       - [DST branch for benchmarking](https://github.com/vacp2p/dst-gossipsub-test-node/tree/dst-changes)
+   - Completed tasks:
+       - `vac:acz:ift:2025q3-libp2p-mix-testnet:premature-handler`
+- `nes:2025q3-nescience-consulting`
+   - Overview:
+       - Ran tests in Nexus and Risc0 for elliptic curve operations
+       - Conduct research about hash-based UTXO model, zkvm benchmark and cosmos l2 feasibility
+   - Delivered deliverables:
+       - [New UTXO proposal](https://www.notion.so/Proposal-Merkle-tree-as-UTXO-commitment-2308f96fb65c80e68523d3a8435e6290)
+       - [zkVM benchmark doc](https://www.notion.so/zkVM-benchmark-results-22b8f96fb65c805d985cedbab0f7130d)
+       - [NSSA as a cosmos zone doc](https://www.notion.so/NSSA-as-a-Cosmos-Zone-2388f96fb65c8042ad4ae1e805fcc604)
+   - Completed tasks:
+       - `acz:nes:2025q3-nescience-consulting:R1`
+       - `acz:nes:2025q3-nescience-consulting:zkvm-benchmark`
+       - `acz:nes:2025q3-nescience-consulting:alt-utxo`
+       - `acz:nes:2025q3-nescience-consulting:cosmos-l2-feasibility`
+- `nomos:2025q3-nomos-consulting`
+   - Overview:
+   - Delivered deliverables:
+       - Reviered rewarding data availability network doc.
+   - Completed tasks:
+       - `acz:nomos:2025q2-nomos-consulting:zk-consulting-nomos-1`
 
 ### RFC
 #### highlights
@@ -449,6 +528,8 @@ draft: false
 ### Nim
 #### highlights
 
+ - Continue work in Road to Nimble 1.0
+ - Nimble build system now supports NIMBLE_COMMIT 
 ### Security
 #### highlights
 - Reviewed and updated the Master Wallet Index documentation
