Weekly report and a few fixes

--- a/content/updates/2025-10-06.md
+++ b/content/updates/2025-10-06.md
@@ -7,7 +7,7 @@ lastmod: 2025-10-06
 draft: false
 ---
 
-## Vac 2025/09/29
+## Vac 2025/10/06
 
 ### highlights
 
@@ -54,7 +54,35 @@ draft: false
     - Call with DST to understand memory issues experienced in lab
 ### vac:tke:
 
-
+- `admin`
+  - joined the TKE retrospective
+  - prepared TKE Commitments for Q4/2025
+- `misc`
+  - DARKPRAGUE on Fr-Sun
+- `vac:tke:nomos:stress-test::review-pos-sims`
+  - re-engineered the whole codebase
+  - implemented markets for data storage
+- `vac:tke:ift:logos-token::logos-fundraise`
+  - read the strategy doc again for updates
+  - read Juan's token sales model
+- `vac:tke:ift:logos-token::logos-token-sales`
+  - Finished ~~and present~~ Token Sales summary and decission matrix
+- `vac:tke:ift:logos-token::logos-strategy`
+  - supporting the directions outlined with comments if needed
+  - editing our section if needed
+- `vac:tke:status:karma-incentives`
+  - another Karma dashboard
+  - reviews based on SC progress and discussion on Thu
+  - discussions with Filip in person
+- `vac:tke:nomos:stress-test::dyn-stake-estimation`
+  - Kept working towards improvement of DSE specs
+- `vac:tke:status:cf`
+  - ~~Keep discussing with Matt~~ Reached out to Ned for discussion
+- `vac:tke:ift:tokenomics-research-forum::grantico`
+  - edits and research based on feedback
+  - chatting with Jarrad on this in person to understand focus
+- `vac:tke:ift:tokenomics-research-forum::control`
+  - Progressed research on Opt. Control
 ### vac:qa:
 
 - `status:2025q4-status-go-functional-testing:waku`
@@ -299,3 +327,14 @@ draft: false
 - Further implementation of unit tests for LIDO services
 
 ### vac:bi:
+
+- `ift:2025q4-ift-townhall-transcript`
+    - Working on pipeline to download and store videos in minio
+    - Testing OpenAI `medium` video to text model to do the transcript.
+- `status:2025q4-status-social-pipeline`
+    - n8n pipeline to post discord message for each forum post and Social Media post,
+    - creating thread to include the forum reply
+    - Wrote documentation for n8n pipeline
+- `logos:2025q4-logos-winnable-stories-sm-accounts`
+    - Exploration of csv files given by Logos movement team
+    - Working on finding Social media account to monitor based on our follower.
