--- a/content/updates/2025-09-29.md
+++ b/content/updates/2025-09-29.md
@@ -308,6 +308,38 @@ draft: false
 
 ### vac:web:
 
+- `status:2025q3-sn-hub`
+  - Assigning Aragon team depositing task https://github.com/status-im/status-web/issues/775
+- `status:2025q3-sn-website`
+  - Translating Status Network website https://github.com/status-im/status-network-website/pull/19
+- `status:2025q3-status-website`
+  - Translating Status website https://github.com/status-im/status-website/pull/1618
+  - Opening Status website https://github.com/status-im/status-web/pull/806
+- `keycard:2025q3-keycard-website`
+  - Translating Keycard website https://github.com/keycard-tech/keycard-website/pull/109
+  - Add Quick Start page for Shell - [Github keycard-tech/keycard-website#106](https://github.com/keycard-tech/keycard-website/pull/106)
+- `status:2025q3-sn-website`
+  - Opening Status network website https://github.com/status-im/status-web/pull/807
+- `status:2025q3-sn-hub`
+  - Connect Wallet - [Github status-im/status-web#804](https://github.com/status-im/status-web/pull/804)
+- `ift:2025q4-psf-website`
+  - Ticketing solution research - The team prefers 3ckets until now [(Website)](https://3cket.com/en/), [(ClickUp)](https://app.clickup.com/t/86b6qve3a)
+- `ift:2025q4-logos-contributions-portal`
+  - Contribute Portal: Leaderboard implementation [(Github)](https://github.com/acid-info/contribute.logos.co/pull/6), [(Preview)](https://dev-contribute.logos.co/en/leaderboard/), [(Proposal)](https://www.notion.so/Logos-Contribute-Portal-Ladder-System-Proposal-2698f96fb65c80158488dcc7d9f427ef)
+- `ift:2025q4-logos-website`
+  - [Technical SEO implementation](https://github.com/acid-info/logos-co/pull/5)
+  - Merge Jack's updates and [subpages](https://github.com/acid-info/logos-co/commit/c1b0d859895d8882b3c39079da833f1ef9ad0382) into the master branch
+  - [Fix UI and responsiveness bugs](https://github.com/acid-info/logos-co/commit/91628c2a9f1ec801edd7292e9b1d743b2da470b4cf)
+- `ift:2025q4-maintenance`
+  - Investigate `umami is not defined` error
+  - Update node version requirements - minor
+- `admin/misc`
+  - Requesting a GitHub team across orgs
+  - Collecting team commitments https://github.com/vacp2p/roadmap/pull/286
+  - Farewell to westphalia landing page updates for book marketing campaigns [(Website)](https://logos.co/farewell-to-westphalia), [(Github)](https://github.com/acid-info/logos.co/commit/1892d7840d53b86c9ab2c7b5188f6b691bbb04a0)
+  - Open source contributor outreach: (Xav - [Github](https://github.com/nipsysdev/Ethos), [Website](https://ethos.nipsys.dev/)), (Korean translator - [Github](https://github.com/acid-info/contribute.logos.co/pull/5#issuecomment-3319795137))
+  - RealFi Hack campaign landing page [(Website)](https://logos.co/campaigns/real-fi-hack), [(Github)](https://github.com/acid-info/logos.co/commits/develop/)
+  - Call with Lou & Alfred regarding the choice of ticketing solution
 
 ### vac:infra:
 
