chore: monthly updates

--- a/content/monthly/2025-10.md
+++ b/content/monthly/2025-10.md
@@ -8,17 +8,17 @@ draft: false
 
 ### P2P
 
-- Shipped nim-libp2p 1.14.x with reset fixes, chronos WaitGroup support, and cleaner hole-punching workflows ([vacp2p/nim-libp2p#1751](https://github.com/vacp2p/nim-libp2p/pull/1751), [vacp2p/nim-libp2p#1742](https://github.com/vacp2p/nim-libp2p/pull/1742), [status-im/nim-chronos#589](https://github.com/status-im/nim-chronos/pull/589), [vacp2p/nim-libp2p#1730](https://github.com/vacp2p/nim-libp2p/pull/1730), [vacp2p/nim-libp2p#1727](https://github.com/vacp2p/nim-libp2p/pull/1727)).
-- Patched AutonatV2 dialback regressions and exposed new AutoTLS/transport hooks for builders ([vacp2p/nim-libp2p#1736](https://github.com/vacp2p/nim-libp2p/pull/1736), [vacp2p/nim-libp2p#1741](https://github.com/vacp2p/nim-libp2p/pull/1741), [vacp2p/nim-libp2p#1731](https://github.com/vacp2p/nim-libp2p/pull/1731), [vacp2p/nim-libp2p#1732](https://github.com/vacp2p/nim-libp2p/pull/1732)).
+- Shipped nim-libp2p 1.14.x with reset fixes, chronos WaitGroup support, and cleaner hole-punching workflows ([vacp2p/nim-libp2p#1751](https://github.com/vacp2p/nim-libp2p/pull/1751), [#1742](https://github.com/vacp2p/nim-libp2p/pull/1742), [status-im/nim-chronos#589](https://github.com/status-im/nim-chronos/pull/589), [vacp2p/nim-libp2p#1730](https://github.com/vacp2p/nim-libp2p/pull/1730), [#1727](https://github.com/vacp2p/nim-libp2p/pull/1727)).
+- Patched AutonatV2 dialback regressions and exposed new AutoTLS/transport hooks for builders ([vacp2p/nim-libp2p#1736](https://github.com/vacp2p/nim-libp2p/pull/1736), [#1741](https://github.com/vacp2p/nim-libp2p/pull/1741), [#1731](https://github.com/vacp2p/nim-libp2p/pull/1731), [#1732](https://github.com/vacp2p/nim-libp2p/pull/1732)).
 - Built targeted QUIC regression harnesses for nil-pointer, OOM, and teardown issues, shipping fixes in [vacp2p/nim-quic#132](https://github.com/vacp2p/nim-quic/pull/132), [#133](https://github.com/vacp2p/nim-quic/pull/133), and [#134](https://github.com/vacp2p/nim-quic/pull/134).
-- Replaced OpenSSL with BoringSSL across the stack and retired the `libp2p_quic_support` flag ([vacp2p/nim-libp2p#1761](https://github.com/vacp2p/nim-libp2p/pull/1761), [vacp2p/nim-libp2p#1782](https://github.com/vacp2p/nim-libp2p/pull/1782), [vacp2p/nim-ngtcp2#22](https://github.com/vacp2p/nim-ngtcp2/pull/22)).
+- Replaced OpenSSL with BoringSSL across the stack and retired the `libp2p_quic_support` flag ([vacp2p/nim-libp2p#1761](https://github.com/vacp2p/nim-libp2p/pull/1761), [#1782](https://github.com/vacp2p/nim-libp2p/pull/1782), [vacp2p/nim-ngtcp2#22](https://github.com/vacp2p/nim-ngtcp2/pull/22)).
 - Landed QUIC stabilisation covering blocked streams, ack handling, error hygiene, and fatal-close handling ([vacp2p/nim-quic#151](https://github.com/vacp2p/nim-quic/pull/151), [#155](https://github.com/vacp2p/nim-quic/pull/155), [#160](https://github.com/vacp2p/nim-quic/pull/160), [#162](https://github.com/vacp2p/nim-quic/pull/162), [#163](https://github.com/vacp2p/nim-quic/pull/163), [#165](https://github.com/vacp2p/nim-quic/pull/165), [#167](https://github.com/vacp2p/nim-quic/pull/167)).
 - Bumped nim-quic to v0.5.0 alongside dependency tuning and message-size improvements ([vacp2p/nim-quic#168](https://github.com/vacp2p/nim-quic/pull/168), [#169](https://github.com/vacp2p/nim-quic/pull/169), [#170](https://github.com/vacp2p/nim-quic/pull/170), [#171](https://github.com/vacp2p/nim-quic/pull/171), [vacp2p/nim-libp2p#1792](https://github.com/vacp2p/nim-libp2p/pull/1792)).
-- Delivered a docker-compose QUIC harness and chronos-driven client/server tests to reproduce DST lab issues ([vacp2p/nim-quic#175](https://github.com/vacp2p/nim-quic/pull/175), [vacp2p/nim-quic#174](https://github.com/vacp2p/nim-quic/pull/174)).
+- Delivered a docker-compose QUIC harness and chronos-driven client/server tests to reproduce DST lab issues ([vacp2p/nim-quic#175](https://github.com/vacp2p/nim-quic/pull/175), [#174](https://github.com/vacp2p/nim-quic/pull/174)).
 - Extended Kademlia with ping support, provider management, and configuration cleanups ([vacp2p/nim-libp2p#1744](https://github.com/vacp2p/nim-libp2p/pull/1744), [#1746](https://github.com/vacp2p/nim-libp2p/pull/1746), [#1764](https://github.com/vacp2p/nim-libp2p/pull/1764), [#1765](https://github.com/vacp2p/nim-libp2p/pull/1765), [#1783](https://github.com/vacp2p/nim-libp2p/pull/1783), [#1789](https://github.com/vacp2p/nim-libp2p/pull/1789)).
 - Migrated mixnet functionality into nim-libp2p with stream reuse, SURBs, and crypto components ([vacp2p/nim-libp2p#1700](https://github.com/vacp2p/nim-libp2p/pull/1700), [#1702](https://github.com/vacp2p/nim-libp2p/pull/1702), [#1753](https://github.com/vacp2p/nim-libp2p/pull/1753), [vacp2p/mix#80](https://github.com/vacp2p/mix/pull/80), [#83](https://github.com/vacp2p/mix/pull/83), [#84](https://github.com/vacp2p/mix/pull/84), [#85](https://github.com/vacp2p/mix/pull/85), [#90](https://github.com/vacp2p/mix/pull/90)).
 - Landed C-binding threading and request-handling updates for external integrators ([vacp2p/nim-libp2p#1820](https://github.com/vacp2p/nim-libp2p/pull/1820)).
-- Published complementary coding-style guidance and supported the AutoTLS client spec ([vacp2p/nim-libp2p#1752](https://github.com/vacp2p/nim-libp2p/pull/1752), [vacp2p/nim-libp2p#1762](https://github.com/vacp2p/nim-libp2p/pull/1762), [libp2p/specs#682](https://github.com/libp2p/specs/pull/682)).
+- Published complementary coding-style guidance and supported the AutoTLS client spec ([vacp2p/nim-libp2p#1752](https://github.com/vacp2p/nim-libp2p/pull/1752), [#1762](https://github.com/vacp2p/nim-libp2p/pull/1762), [libp2p/specs#682](https://github.com/libp2p/specs/pull/682)).
 
 ### Tokenomics
 
@@ -52,7 +52,7 @@ draft: false
 
 - Diagnosed Status–nwaku configuration blockers, coordinating triage with partner teams.
 - Progressed RLN deployment prep, capturing crash reports and shaping Waku investigation follow-ups.
-- Refactored 10ksim deployment tooling with builder classes, Python YAML generation, and async publish fixes ([vacp2p/10ksim#143](https://github.com/vacp2p/10ksim/pull/143), [vacp2p/10ksim#144](https://github.com/vacp2p/10ksim/pull/144), [vacp2p/10ksim#168](https://github.com/vacp2p/10ksim/pull/168), [vacp2p/10ksim#169](https://github.com/vacp2p/10ksim/pull/169)).
+- Refactored 10ksim deployment tooling with builder classes, Python YAML generation, and async publish fixes ([vacp2p/10ksim#143](https://github.com/vacp2p/10ksim/pull/143), [#144](https://github.com/vacp2p/10ksim/pull/144), [#168](https://github.com/vacp2p/10ksim/pull/168), [#169](https://github.com/vacp2p/10ksim/pull/169)).
 - Verified js-waku lightpush on Kubernetes via updated experiments and the shared analysis in [vacp2p/research#206](https://github.com/vacp2p/research/pull/206).
 - Published the nim-libp2p v1.13 regression report and mixnet findings for downstream consumers.
 - Migrated Nomos compose setups to Kubernetes, unlocking first decentralised deployment runs ([vacp2p/10ksim#145](https://github.com/vacp2p/10ksim/pull/145)).
@@ -80,7 +80,7 @@ draft: false
 - Released Zerokit v0.9.0 with performance updates, partial big-endian support, and CI refinements ([vacp2p/zerokit#341](https://github.com/vacp2p/zerokit/pull/341), [#342](https://github.com/vacp2p/zerokit/pull/342), [#344](https://github.com/vacp2p/zerokit/pull/344), [#345](https://github.com/vacp2p/zerokit/pull/345)).
 - Added multi-tree gas-checking support to the RLN prover, targeting >1M user scenarios.
 - Drafted multi-steward de-MLS RFC updates and presented findings on the IFT research call ([vacp2p/rfc-index#193](https://github.com/vacp2p/rfc-index/pull/193)).
-- Refined libp2p-mix RFC content covering sphinx formatting, SURB design, and security considerations ([vacp2p/rfc-index#173](https://github.com/vacp2p/rfc-index/pull/173), [vacp2p/rfc-index#194](https://github.com/vacp2p/rfc-index/pull/194)).
+- Refined libp2p-mix RFC content covering sphinx formatting, SURB design, and security considerations ([vacp2p/rfc-index#173](https://github.com/vacp2p/rfc-index/pull/173), [#194](https://github.com/vacp2p/rfc-index/pull/194)).
 - Published a relay mini RFC and supporting security notes for mixnet adoption ([vacp2p/rfc-index#178](https://github.com/vacp2p/rfc-index/pull/178)).
 - Ran SN prover stress tests on 128-core hardware, reaching the 180 TPS target.
 - Released discovery exploration outputs including the disc-NG RFC draft and service analysis.
@@ -97,7 +97,7 @@ draft: false
 - Advanced slot builder RFC drafting toward its first review cycle.
 - Extended Codex-store and marketplace RFCs via [vacp2p/rfc-index#207](https://github.com/vacp2p/rfc-index/pull/207) and [#208](https://github.com/vacp2p/rfc-index/pull/208), outlining purchase and sales modules.
 - Began planning block-exchange and community-history RFCs for upcoming cycles.
-- Updated Opchan, Qaku, and other Waku RFCs to keep specs current ([vacp2p/rfc-index#180](https://github.com/vacp2p/rfc-index/pull/180), [vacp2p/rfc-index#181](https://github.com/vacp2p/rfc-index/pull/181), [waku-org/specs#77](https://github.com/waku-org/specs/pull/77)).
+- Updated Opchan, Qaku, and other Waku RFCs to keep specs current ([vacp2p/rfc-index#180](https://github.com/vacp2p/rfc-index/pull/180), [#181](https://github.com/vacp2p/rfc-index/pull/181), [waku-org/specs#77](https://github.com/waku-org/specs/pull/77)).
 - Opened IFT forum discussions on the GKR protocol to broaden reviewer engagement.
 - Broke down Logos POC RFCs into focused deliverables covering integration, SDK, auth, and specs ([vacp2p/rfc-index#183](https://github.com/vacp2p/rfc-index/pull/183), [#185](https://github.com/vacp2p/rfc-index/pull/185), [#186](https://github.com/vacp2p/rfc-index/pull/186), [#188](https://github.com/vacp2p/rfc-index/pull/188), [#189](https://github.com/vacp2p/rfc-index/pull/189)).
 - Documented marketplace Phase 2 scope to align Codex stakeholder expectations.
@@ -134,7 +134,7 @@ draft: false
 ### Web
 
 - Queued SN Hub discovery, external link, and withdraw PRs for merge after successive review rounds ([status-im/status-web#808](https://github.com/status-im/status-web/pull/808), [#818](https://github.com/status-im/status-web/pull/818), [#813](https://github.com/status-im/status-web/pull/813)).
-- Built Spaces Calendar and Circles map prototypes with live data ingestion and pagination ([acid-info/admin-acid.logos.co#21](https://github.com/acid-info/admin-acid.logos.co/pull/21), [acid-info/logos-co#16](https://github.com/acid-info/logos-co/pull/16), [acid-info/logos-co#15](https://github.com/acid-info/logos-co/pull/15)).
+- Built Spaces Calendar and Circles map prototypes with live data ingestion and pagination ([acid-info/admin-acid.logos.co#21](https://github.com/acid-info/admin-acid.logos.co/pull/21), [acid-info/logos-co#16](https://github.com/acid-info/logos-co/pull/16), [#15](https://github.com/acid-info/logos-co/pull/15)).
 - Addressed Cloudinary overages while delivering Devconnect 2025 landing content and SEO updates ([acid-info/logos.co#92](https://github.com/acid-info/logos.co/pull/92), [#90](https://github.com/acid-info/logos.co/pull/90), [#91](https://github.com/acid-info/logos.co/pull/91)).
 - Advanced Karma discovery work, coordinating ticketing integration and Aragon deposit flows ([status-im/status-web#775](https://github.com/status-im/status-web/issues/775)).
 - Maintained `/farewell-to-westphalia` A/B testing and outreach packages for partner universities ([acid-info/logos.co#85](https://github.com/acid-info/logos.co/pull/85)).
