--- a/content/updates/2025-11-03.md
+++ b/content/updates/2025-11-03.md
@@ -90,7 +90,7 @@ draft: false
 
 ### vac:qa:
 
-- `vac:qa:waku:2024q4-interop-testing:maintenance`
+- `vac:qa:waku:2025q4-waku-testing:maintenance`
   - Tested `harbor.status.im/wakuorg/nwaku:v0.37.0-rc.4` within the interop suite.
 - `vac:qa:waku:2025q4-rln-smart-contract-testing:property-based`
   - [PR 40: fuzz test expansion](https://github.com/waku-org/waku-rlnv2-contract/pull/40) remains in review to broaden RLN coverage.
